--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"hpp": "^0.2.3",
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.2",
 		"pg": "^8.13.1",
 		"prettier": "^3.4.2",
 		"reflect-metadata": "^0.2.2",
@@ -50,6 +51,7 @@
 		"@types/hpp": "^0.2.6",
 		"@types/jsonwebtoken": "^9.0.8",
 		"@types/morgan": "^1.9.9",
+		"@types/multer": "^1.4.12",
 		"@types/node": "^22.13.0",
 		"@types/swagger-jsdoc": "^6.0.4",
 		"@types/swagger-ui": "^3.52.4",
